# adsbwatch

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
adsbwatch/: __init__.py  airspace.py  cli.py  connect.py  core.py  decision.py  feeds.py  intel.py  mcp_server.py  patterns.py
demos/: 01_anomaly_scan.py  02_callsign_spoofing.py  03_force_protection.py  04_intel_export.py  05_live_feed_offline.py  06_impossible_kinematics.py  07_geojson_map.py  08_stix_tip.py  09_region_clip.py  10_airgap_snapshot.py  11_triage_queue.py  12_sensor_fusion.py  13_advisory_playbook.py  14_malformed_input.py  15_loiter_tuning.py  16_full_pipeline.py  17_clean_feed.py  18_emergency_response.py  19_cli_exit_codes.py  20_spoof_combo.py  21_airspace_incursion.py  22_pattern_of_life.py  23_kml_export.py  24_cot_atak.py  _common.py  run_all.py
demos/01-basic/: SCENARIO.md  feed.csv  sensors.csv  zones.json
demos/04-live-feed/: SCENARIO.md
deploy/: docker-compose.yml  k8s.yaml
docs/: ADVANCED.md  ARCHITECTURE.md  DEMOS.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
ports/: README.md
tests/: test_airspace.py  test_cli_errors.py  test_cli_new_commands.py  test_connect.py  test_core_edge.py  test_datafeeds.py  test_decision.py  test_decision_edge.py  test_demos.py  test_detectors_extra.py  test_feeds.py  test_feeds_edge.py  test_hardening.py  test_intel.py  test_intel_edge.py  test_intel_kml_cot.py  test_kinematics.py  test_patterns.py  test_smoke.py
(+9 files in other folders)
