[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-adsbwatch"
version = "0.4.0"
description = "Analyze an ADS-B feed/CSV for anomalies: callsign spoofing, squawk 7500/7600/7700, and unusual loiter patterns."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "defense", "adsbwatch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/adsbwatch"

[project.scripts]
"adsbwatch-emit" = "adsbwatch.connect:emit_main"
adsbwatch = "adsbwatch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["adsbwatch"]

[tool.hatch.metadata]
allow-direct-references = true
